# accumulate-rust-sdk

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  ENCODING_REMEDIATION.md  FINAL_PARITY_REPORT.md  FINAL_SUMMARY.md  Makefile  PARITY_COMPLIANCE_REPORT.md  PHASE_4_SUMMARY.md  PRODUCTION_READINESS.md  README.md  TYPESCRIPT_DEPENDENCIES_AUDIT.md  TYPESCRIPT_VECTORS_WARNING.md  actual_files.txt  build.rs  llms-full.txt  llms.txt  phase_3_run.ps1  requirements.txt
.cargo/: config.toml
.claude/: settings.local.json
.config/: .llvm-cov.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: QUALITY_GATES.md  README.md  TYPE_MATRIX_ROUNDTRIP.md
docs/audits/: TYPESCRIPT_VECTORS_WARNING.md
docs/development/reports/: FINAL_SUMMARY.md  PHASE_4_SUMMARY.md
docs/references/: SIGNATURE_REFERENCE.md
enum_test_standalone/: Cargo.toml
enum_test_standalone/src/: comprehensive_tests.rs  lib.rs  main.rs
examples/: 100_keygen_lite_urls.rs  120_faucet_local_devnet.rs  210_buy_credits_lite.rs  220_create_adi_v3.rs  270_write_data.rs  280_send_tokens_lta_to_adi.rs  999_zero_to_hero.rs  README.md  basic_usage.rs  example_02_adi_creation.rs  example_07_custom_tokens.rs  example_07_query_operations.rs  example_08_query_transactions.rs  example_09_key_management.rs  example_11_quickstart_demo.rs  faucet_demo.rs  transaction_demo.rs
examples/misc/: 100_keygen_lite_urls.rs  120_faucet_local_devnet.rs  210_buy_credits_lite.rs  270_write_data.rs  transaction_demo.rs
examples/v3/: example_01_lite_identities.rs  example_02_adi_creation.rs  example_03_token_accounts.rs  example_04_data_accounts.rs  example_05_adi_to_adi_transfer.rs  example_06_custom_tokens.rs  example_07_query_operations.rs  example_08_query_transactions.rs  example_09_key_management.rs  example_10_threshold_updates.rs  example_12_multi_signature_workflow.rs  example_13_adi_to_adi_transfer_with_header_options.rs
scripts/: README.md  coverage_gate.ps1  coverage_gate.sh  package_check.ps1  package_check.sh  phase_3_run.ps1  pre-commit.sh  run_parity_gate.ps1  run_quality_gates.ps1  setup-dev.sh  verify_phase_2_2_2_3.py
src/: amounts.rs  canonjson.rs  client.rs  errors.rs  helpers.rs  json_rpc_client.rs  lib.rs  types.rs  types_matrix.rs
src/accumulate_client/: __init__.py  canonjson.py  crypto.py
src/accumulate_client/crypto/: __init__.py  ed25519.py
src/accumulate_client/protocol/: __init__.py  hashing.py
src/codec/: canonical.rs  crypto.rs  hash_helper.rs  hashes.rs  mod.rs  reader.rs  signing.rs  transaction_codec.rs  writer.rs
src/crypto/: ed25519.rs  ed25519_helper.rs  mod.rs
src/protocol/: envelope.rs  mod.rs  transaction.rs
src/runtime/: hashing.rs  mod.rs  rpc.rs  signing.rs  signing_test_shims.rs
tests/: README.md  api_smoke_tests.rs  api_surface_tests.rs  basic.rs  binary_parity.rs  canonical_json_test.rs  codec_integration_test.rs  conformance.rs  core_edge_case_tests.rs  enum_edge_case_tests.rs  enum_integration_tests.rs  enum_only_tests.rs  enum_performance_tests.rs  enum_property_tests.rs  enum_roundtrip_tests.rs  enum_stability_tests.rs  envelope_encoding_test.rs  envelope_shape_tests.rs  golden_api_error_tests.rs  golden_canonical_json_tests.rs  golden_hash_tests.rs  golden_signature_depth_tests.rs  golden_vector_tests.rs  hash_and_sig_parity.rs  hash_vectors_parity.rs  hash_vectors_test.rs  mod.rs  parity_gates.rs  phase1_coverage_validation.rs  phase2_coverage_validation.rs  phase3_coverage_validation.rs  rpc_smoke_tests.rs  signature_deep_tests.rs  signature_dispatch_tests.rs  signature_integration_tests.rs  signing_vectors_parity.rs  signing_vectors_test.rs  tests_metadata.json  transaction_edge_case_tests.rs  tx_allowlist_tests.rs  (+2 more)
tests/conformance/: __init__.py  binary_parity.rs  canonical_json_parity.rs  canonical_json_test.rs  envelope_encoding_parity.rs  envelope_encoding_test.rs  hash_and_sig_parity.rs  hash_vectors_test.rs  mod.rs  signing_vectors_parity.rs  signing_vectors_test.rs  test_canonical_json_parity.py  test_hash_and_sig_parity.py  test_protocol_types.rs  type_matrix_roundtrip.rs  type_matrix_verification.rs  url_derivation_test.rs
tests/fuzz/: mod.rs  ts_fuzz_roundtrip.rs
tests/golden/: canonical_json_tests.json  envelope_fixed.golden.json  golden_api_error_tests.rs  golden_hash_tests.rs  golden_signature_depth_tests.rs  mod.rs  sample.golden.json  ts_rand_vectors.jsonl  tx_signing_vectors.json  typescript_sdk_vectors.json
tests/golden/api/: error_404.json  error_500.json  error_construction.json  error_serialization.json  signature_errors.json
tests/golden/canonical/: canonical_deep_nesting.json  canonical_mixed_types.json
tests/golden/enums/: sig_ed25519.golden.json  tx_only.golden.json  tx_signing_vectors.json  vectors_summary.json
tests/golden/hash/: sha256_test_3.json  sha256_test_4.json  transaction_header_hash.json  url_hash_acc_uppercase_acme.json
tests/golden/signatures/: btc.json  canonical_delegated.json  canonical_ed25519.json  canonical_legacy_ed25519.json  delegated_depth6_fail.json  delegated_smart_constructor.json  depth_edge_cases.json  ed25519.json  eth.json  internal.json  partition.json  receipt.json  rsaSha256.json  (+1 more)
tests/integration/: devnet_health_test.rs  mod.rs  zero_to_hero_devnet_test.rs
tests/quarantine/: mod.rs
tests/repo/: mod.rs  no_todos.rs
tests/specialized/: mod.rs  parity_gates.rs  type_matrix_verification.rs
tests/unit/: mod.rs
tests/unit/codec/: mod.rs  (+9 more)
tool/: disable_ci.ps1  ensure_no_ci.ps1  ensure_no_ci.sh  parity_gate.ps1  parity_gate.sh  phase_1_1_verify.ps1  phase_1_2_verify.ps1  phase_1_3_1_4_verify.ps1  phase_2_1_verify.ps1  phase_4_run.ps1  phase_4_run.sh  regen_enums.ps1  regen_signatures.ps1
tooling/backends/: rust_enums_codegen.py  rust_methods_codegen.py  rust_signatures_codegen.py  rust_tests_golden.py  rust_transactions_codegen.py  rust_tx_header_codegen.py  rust_types_codegen.py  rust_types_graph.py
tooling/orchestrator/: phase2_finalize.py
tooling/ts-fixture-exporter/: README.md  export-fixtures.js  export-random-vectors.js  package-lock.json  package.json
(+219 files in other folders)
