[package]
name         = "accumulate-client"
version      = "2.0.0"
edition      = "2021"
license      = "MIT"
readme       = "README.md"
authors      = ["OpenDLT <dev@opendlt.dev>"]
description  = "Accumulate Rust SDK (V2/V3 unified) with DevNet-first flows"
repository   = "https://github.com/opendlt/opendlt-rust-v2v3-sdk"
homepage     = "https://github.com/opendlt/opendlt-rust-v2v3-sdk"
documentation= "https://docs.rs/accumulate-client"
keywords     = ["accumulate","blockchain","sdk","json-rpc","crypto"]
categories   = ["api-bindings","cryptography","network-programming"]
publish      = true

[lib]
name = "accumulate_client"
path = "src/lib.rs"

[features]
default = ["async-client"]
async-client = ["reqwest/json","reqwest/rustls-tls","tokio","tokio/macros"]
blocking-client = ["reqwest/blocking","reqwest/json","reqwest/rustls-tls"]
typescript-compat-tests = []  # Optional TypeScript compatibility tests (known to have buggy test vectors)

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json","rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread","macros"], optional = true }
thiserror = "1"
anyhow = "1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
num-bigint = "0.4"
sha2 = "0.10"
hex = { version = "0.4", features = ["serde"] }
url = "2"
dotenvy = "0.15"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
rsa = { version = "0.9", features = ["sha2"] }
sha3 = "0.10"
async-trait = "0.1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
# Restriction lints for production code
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Pedantic lints for code quality (lower priority so individual lints override)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Performance lints
perf = { level = "warn", priority = -1 }

# Cargo lints
cargo = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too strict for our use case
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unreadable_literal = "allow"
needless_continue = "allow"