[package]
name = "accumulate-sdk"
version = "2.0.2"
edition = "2021"
rust-version = "1.70"
license = "MIT"
readme = "README.md"
authors = ["OpenDLT Developers"]
description = "Accumulate Rust SDK (V2/V3 unified) with DevNet-first flows"
repository = "https://github.com/opendlt/opendlt-rust-v2v3-sdk"
homepage = "https://github.com/opendlt/opendlt-rust-v2v3-sdk"
documentation = "https://docs.rs/accumulate-sdk"
keywords = ["accumulate","blockchain","sdk","json-rpc","crypto"]
categories = ["api-bindings","cryptography","network-programming"]
publish = true

include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "examples/**",
]

[lib]
name = "accumulate_client"
path = "src/lib.rs"

[features]
default = ["async-client"]

# Async client (Tokio + reqwest async)
async-client = ["dep:reqwest", "reqwest/json", "reqwest/rustls-tls", "dep:tokio"]

# Blocking client (reqwest blocking)
blocking-client = ["dep:reqwest", "reqwest/blocking", "reqwest/json", "reqwest/rustls-tls"]

typescript-compat-tests = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

thiserror = "1"
anyhow = "1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
num-bigint = "0.4"
sha2 = "0.10"
hex = { version = "0.4", features = ["serde"] }
url = "2"
dotenvy = "0.15"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
rsa = { version = "0.9", features = ["sha2"] }
sha3 = "0.10"
async-trait = "0.1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"

pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unreadable_literal = "allow"
needless_continue = "allow"
