[package]
name = "accumulate-sdk"
version = "2.0.2"
edition = "2021"
rust-version = "1.70"
license = "MIT"
readme = "README.md"
authors = ["OpenDLT Developers"]
description = "Accumulate Rust SDK (V2/V3 unified) with DevNet-first flows"
repository = "https://github.com/opendlt/opendlt-rust-v2v3-sdk"
homepage = "https://github.com/opendlt/opendlt-rust-v2v3-sdk"
documentation = "https://docs.rs/accumulate-sdk"
keywords = ["accumulate","blockchain","sdk","json-rpc","crypto"]
categories = ["api-bindings","cryptography","network-programming"]
publish = true

include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "examples/**",
]

[lib]
name = "accumulate_client"
path = "src/lib.rs"

[features]
default = ["async-client"]

# Async client (Tokio + reqwest async)
async-client = ["dep:reqwest", "reqwest/json", "reqwest/rustls-tls", "dep:tokio"]

# Blocking client (reqwest blocking)
blocking-client = ["dep:reqwest", "reqwest/blocking", "reqwest/json", "reqwest/rustls-tls"]

typescript-compat-tests = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

thiserror = "1"
anyhow = "1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
num-bigint = "0.4"
sha2 = "0.10"
hex = { version = "0.4", features = ["serde"] }
url = "2"
dotenvy = "0.15"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
rsa = { version = "0.9", features = ["sha2"] }
sha3 = "0.10"
async-trait = "0.1"
chrono = "0.4"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"

pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unreadable_literal = "allow"
needless_continue = "allow"

# ── V3 examples ──────────────────────────────────────────────
[[example]]
name = "example_01_lite_identities"
path = "examples/v3/example_01_lite_identities.rs"

[[example]]
name = "example_02_adi_creation"
path = "examples/v3/example_02_adi_creation.rs"

[[example]]
name = "example_03_token_accounts"
path = "examples/v3/example_03_token_accounts.rs"

[[example]]
name = "example_04_data_accounts"
path = "examples/v3/example_04_data_accounts.rs"

[[example]]
name = "example_05_adi_to_adi_transfer"
path = "examples/v3/example_05_adi_to_adi_transfer.rs"

[[example]]
name = "example_06_custom_tokens"
path = "examples/v3/example_06_custom_tokens.rs"

[[example]]
name = "example_07_query_operations"
path = "examples/v3/example_07_query_operations.rs"

[[example]]
name = "example_08_query_transactions"
path = "examples/v3/example_08_query_transactions.rs"

[[example]]
name = "example_09_key_management"
path = "examples/v3/example_09_key_management.rs"

[[example]]
name = "example_10_threshold_updates"
path = "examples/v3/example_10_threshold_updates.rs"

[[example]]
name = "example_11_quickstart_demo"
path = "examples/v3/example_11_quickstart_demo.rs"

[[example]]
name = "example_12_multi_signature_workflow"
path = "examples/v3/example_12_multi_signature_workflow.rs"

[[example]]
name = "example_13_adi_to_adi_transfer_with_header_options"
path = "examples/v3/example_13_adi_to_adi_transfer_with_header_options.rs"

[[example]]
name = "faucet_demo"
path = "examples/v3/faucet_demo.rs"

# ── Misc examples ────────────────────────────────────────────
[[example]]
name = "100_keygen_lite_urls"
path = "examples/misc/100_keygen_lite_urls.rs"

[[example]]
name = "120_faucet_local_devnet"
path = "examples/misc/120_faucet_local_devnet.rs"

[[example]]
name = "210_buy_credits_lite"
path = "examples/misc/210_buy_credits_lite.rs"

[[example]]
name = "220_create_adi_v3"
path = "examples/misc/220_create_adi_v3.rs"

[[example]]
name = "270_write_data"
path = "examples/misc/270_write_data.rs"

[[example]]
name = "280_send_tokens_lta_to_adi"
path = "examples/misc/280_send_tokens_lta_to_adi.rs"

[[example]]
name = "999_zero_to_hero"
path = "examples/misc/999_zero_to_hero.rs"

[[example]]
name = "basic_usage"
path = "examples/misc/basic_usage.rs"

[[example]]
name = "transaction_demo"
path = "examples/misc/transaction_demo.rs"
